--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" href="./sekiro_favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css"
         integrity="sha384-REHJTs1r2ErKBuJB0fCK99gCYsVjwxHrSU0N7I1zl9vZbggVJXRMsv/sLlOAGb4M" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/menu.css">
-        <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/main.css">
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script async src="js/jquery.js"></script>
@@ -24,71 +24,75 @@
         <div class="img">
             <img src="./img/Sekiro_menus.png" alt="Sekiro_menus" />
         </div>
-            <div class="text">
-                <span>Sekiro: Shadow die twice Fandom</span>
-            </div>
-            <div class="container">
-                <div class="navbar navbar-static-top">
-                    <div class="navigation">
-                        <nav>
-                            <ul class="nav topnav bold">
-                                <li class="dropdown active">
-                                    <a href="index.html">Home</a>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#">Jeu <i class="fas fa-angle-down"></i></a>
-                                    <ul class="dropdown-menu bold">
-                                        <li><a href="#">Personnages</a></li>
-                                        <li><a href="#">Lieux</a></li>
-                                        <li><a href="#">Lore</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#">Items <i class="fas fa-angle-down"></i></a>
-                                    <ul style="display: none;" class="dropdown-menu bold">
-                                        <li><a href="#">Améliorations</a></li>
-                                        <li><a href="#">Items clé</a></li>
-                                        <li><a href="#">Consomables</a></li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#">Mecanique de jeux <i class="fas fa-angle-down"></i></a>
-                                    <ul style="display: none;" class="dropdown-menu bold">
-                                        <li><a href="#">Boss du jeu</a></li>
-                                        <li><a href="#">Mecaniques de combat</a></li>
-                                        <li><a href="#">Ennemies</a></li>
-                                        <li><a href="#">Outils de prothèse</a></li>
-                                        <li><a href="#">Arts de combat</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
+        <div class="text">
+            <span>Sekiro: Shadow die twice Fandom</span>
+        </div>
+        <div class="container">
+            <div class="navbar navbar-static-top">
+                <div class="navigation">
+                    <nav>
+                        <ul class="nav topnav bold">
+                            <li class="dropdown active">
+                                <a href="index.html">Home</a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#">Jeu <i class="fas fa-angle-down"></i></a>
+                                <ul class="dropdown-menu bold">
+                                    <li><a href="#">Personnages</a></li>
+                                    <li><a href="#">Lieux</a></li>
+                                    <li><a href="#">Lore</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#">Items <i class="fas fa-angle-down"></i></a>
+                                <ul style="display: none;" class="dropdown-menu bold">
+                                    <li><a href="#">Améliorations</a></li>
+                                    <li><a href="#">Items clé</a></li>
+                                    <li><a href="#">Consomables</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#">Mecanique de jeux <i class="fas fa-angle-down"></i></a>
+                                <ul style="display: none;" class="dropdown-menu bold">
+                                    <li><a href="#">Boss du jeu</a></li>
+                                    <li><a href="#">Mecaniques de combat</a></li>
+                                    <li><a href="#">Ennemies</a></li>
+                                    <li><a href="#">Outils de prothèse</a></li>
+                                    <li><a href="#">Arts de combat</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
+        </div>
     </header>
     <section>
         <article>
             <h1>Sekiro</h1>
             <hr />
-            <p>Sekiro, également connu sous le nom de Wolf, ou Okami, est le protagoniste éponyme de Sekiro : Shadows
+            <aside>
+                <div class="sekiro">
+                    <h2 class="title">Sekiro</h2>
+                    <img src="./img/Loup.png" alt="img_loup" />
+                </div>
+                <iframe src="https://discordapp.com/widget?id=627823987585712140&theme=dark" width="350" height="500"
+                    allowtransparency="true" frameborder="0"></iframe>
+            </aside>
+            <p class="text">Sekiro, également connu sous le nom de Wolf, ou Okami, est le protagoniste éponyme de Sekiro
+                : Shadows
                 Die Twice. Il est un Shinobi au service du divin héritier, Kuro. Lié par l'honneur, il est posé et
                 réticent, mais il a aussi l'impitoyable volonté d'accomplir sa mission par tous les moyens nécessaires.
             </p>
-            <p>Sekiro a déjà perdu la vie face au chef du clan Ashina, Genichiro Ashina, dans le prologue, en perdant le
+            <p class="text">Sekiro a déjà perdu la vie face au chef du clan Ashina, Genichiro Ashina, dans le prologue,
+                en perdant le
                 jeune seigneur qu'il était chargé de protéger et son bras gauche. Plus tard, il a reçu une prothèse du
                 bras par le Sculpteur au Temple Dilapidé à sa place, créé à l'origine par Dogen.</p>
-        </article>
-        <aside>
-            <h2 class="title">Sekiro</h2>
-            <img src="./img/Loup.png" alt="img_loup" />
-            <iframe src="https://discordapp.com/widget?id=627823987585712140&theme=dark" width="350" height="500"
-                allowtransparency="true" frameborder="0"></iframe>
-        </aside>
+        </article class="intro">
         <article>
             <h2>Histoire</h2>
             <hr />
-            <p>
+            <p class="text">
                 Quelque deux décennies avant l'événement principal du jeu, Sekiro a été retrouvé par le Hibou sur le
                 champ de bataille apaisé,
                 apparemment orphelin du coup d'État d'Ishin Ashina et de la récupération de la patrie de son clan.
@@ -98,7 +102,7 @@
                 juste après.
             </p>
 
-            <p>
+            <p class="text">
                 Sekiro fut un temps nommé Shinobi du Divin Héritier, ce qui l'obligea à protéger son jeune seigneur
                 pendant toute sa vie. Cette responsabilité a conduit Sekiro dans des moments difficiles lorsque le
                 domaine de Hirata a été attaqué très opportunément par un groupe de banditisme dirigé par Juzou
@@ -122,7 +126,7 @@
             </p>
 
 
-            <p>
+            <p class="text">
                 Sans aucun souvenir de cette nuit effrayante, Sekiro n'avait plus de raison de vivre.
                 Il a été qualifié de voyou par l'armée d'Ashina,
                 probablement en raison des accusations de trahison impliquant la destruction d'Hirata qui n'était pas de
@@ -138,12 +142,50 @@
         <article>
             <h2>Compétence</h2>
             <hr />
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur et facere expedita voluptates cupiditate
+            <li class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur et facere expedita
+                voluptates cupiditate
                 dolore perferendis, in, id tempora minima esse sed sapiente ipsam, ad at debitis porro numquam quam.
-            </p>
+            </li>
+            <li class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga laudantium, doloremque
+                magnam sequi dolores quidem ullam laborum, libero velit neque at animi necessitatibus perspiciatis
+                officiis veritatis ipsam enim? Sequi, voluptates.</li>
+            <li class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga laudantium, doloremque
+                magnam sequi dolores quidem ullam laborum, libero velit neque at animi necessitatibus perspiciatis
+                officiis veritatis ipsam enim? Sequi, voluptates.</li>
+            <li class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga laudantium, doloremque
+                magnam sequi dolores quidem ullam laborum, libero velit neque at animi necessitatibus perspiciatis
+                officiis veritatis ipsam enim? Sequi, voluptates.</li>
+
+
         </article>
-        <div>
+        <div id="galerie">
             <h2>Galerie</h2>
+            <hr>
+            <div id="content">
+                <div class="galerie_presentation">
+                    <div class="content">
+                        <img class="galerie_img" src="img/galery1.jpg" alt="img_1">
+                        <span class="description">combat</span>
+                    </div>
+                    <div class="content">
+                        <img class="galerie_img" src="img/gallery2.png" alt="img_2">
+                        <span class="description">test</span>
+                    </div>
+                    <div class="content">
+                        <img class="galerie_img" src="img/gallery3.png" alt="img_3">
+                        <span class="description">test</span>
+                    </div><div class="content">
+                        <img class="galerie_img" src="img/gallery4.png" alt="img_4">
+                        <span class="description">test</span>
+                    </div><div class="content">
+                        <img class="galerie_img" src="img/gallery5.png" alt="img_5">
+                        <span class="description">test</span>
+                    </div><div class="content">
+                        <img class="galerie_img" src="img/gallery6.png" alt="img_6">
+                        <span class="description">test</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <footer id="footer">
